Correccion de bug que te dejaba hacer click en espacio en tu turno y agregue audios

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p>Presiona la tecla 'espacio' para acusar de mentiroso.</p>
             </div>
         </div>
-        
+        <audio id="audio" src=""></audio>   
     </main>  
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
