--- a/index.html
+++ b/index.html
@@ -4,94 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/icon.ico" type="image/x-icon">
-    <title>Mentiroso</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
+    <link rel="icon" href="../images/icon.ico" type="image/x-icon">
+    <title>Mentiroso - Menú</title>
 </head>
 <body>
-
-    <main id="fondo-main">    
-        <div class="menu">
-            <img src="images/menu.png" alt="Imagen de menu">
+    <main id="main" class="main-menu">
+        <div id="fondoNuevo" class="fondo">
+            <div id="botones" class="botones-menu">
+                <div class="fondo-btn">
+                    <a id="jugar" href="#">Jugar</a>
+                </div>
+                <div class="fondo-btn">                   
+                    <a id="como-jugar" href="#">¿Cómo jugar?</a>
+                </div>                
+            </div>  
+            <div id="instructivo" class="instrucciones">
+                <div id="cerrar"><img src="images/cerrar.png" alt=""></div>
+                <div><p>Instructivo</p></div>
+                <div><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab eos deserunt, nostrum excepturi eum vitae porro amet ex, temporibus iure enim necessitatibus? Ut est exercitationem explicabo illo accusantium soluta iste.
+                Voluptatem amet voluptas, quis ipsa suscipit eaque atque eos assumenda? Esse accusamus soluta assumenda quidem unde dolorem praesentium facilis iure maxime hic aliquid, dolores reiciendis excepturi! Sequi debitis hic repudiandae. lore</p></div>
+            </div>          
         </div>
 
-        <div class="container-cartas-rival">
-            <div class="cartas-rival">
-                <img class="carta" src="" alt=""> 
-            </div>
-            <div class="cartas-rival">
-                <img class="carta" src="" alt=""> 
-            </div>
-            <div class="cartas-rival">
-                <img class="carta" src="" alt=""> 
-            </div>
-            <div class="cartas-rival">
-                <img class="carta" src="" alt=""> 
-            </div>
-            <div class="cartas-rival">
-                <img class="carta" src="" alt=""> 
-            </div>
+        <div id="carga" class="pantalla-carga">
+            <img src="images/tambo2.gif" alt="">
+            <button id="comenzar"><a href="html/mentiroso.html">Comenzar</a></button>
+            <p>Este es un super consejo re piola wacho</p>
         </div>
-
-        <div class="container-vidas-rival">
-            <p>Bot</p>
-            <div >
-                <img class="icono-vida-rival" src="images/calavera2.png" alt="vida">
-                <img class="icono-vida-rival" src="images/calavera2.png" alt="vida">
-                <img class="icono-vida-rival" src="images/calavera2.png" alt="vida">
-                <img class="icono-vida-rival" src="images/calavera2.png" alt="vida">
-                <img class="icono-vida-rival" src="images/calavera2.png" alt="vida">
-            </div>
-        </div>
-
-        <div class="container-palo">
-            <img id="figura" src="" alt="Carta palo">
-        </div> 
         
-        <div class="container-mazo">
-            <img id="carta-mazo" src="images/Reverso.png">
-            <div id="container-texto">
-                <h1 id="texto">¡LIAR!</h1>
-            </div>
-        </div>
-
-        <div class="container-vidas-propias">
-            <p>Santiago</p>
-            <div >
-                <img class="icono-vida-propias" src="images/calavera2.png" alt="vida">
-                <img class="icono-vida-propias" src="images/calavera2.png" alt="vida">
-                <img class="icono-vida-propias" src="images/calavera2.png" alt="vida">
-                <img class="icono-vida-propias" src="images/calavera2.png" alt="vida">
-                <img class="icono-vida-propias" src="images/calavera2.png" alt="vida">
-            </div>
-        </div>
-
-        <div class="container-cartas-propias">
-            <div class="cartas-propias">
-                <img class="carta" src="" alt="">
-            </div>
-            <div class="cartas-propias">
-                <img class="carta" src="" alt="">
-            </div>
-            <div class="cartas-propias">
-                <img class="carta" src="" alt="">
-            </div>
-            <div class="cartas-propias">
-                <img class="carta" src="" alt="">
-            </div>
-            <div class="cartas-propias">
-                <img class="carta" src="" alt="">
-            </div>
-        </div>
-
-        <div class="container-leyenda">
-            <div class="leyenda-fondo">
-                <p>Presiona la tecla 'espacio' para acusar de mentiroso.</p>
-            </div>
-        </div>
-        <audio id="audio" src=""></audio>   
-    </main>  
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="js/index.js"></script>
+    </main>
+    <script src="js/index.js" ></script>
 </body>
 </html>
