Agregue el texto de como jugar y un poco de lore en la pantalla de carga

--- a/index.html
+++ b/index.html
@@ -18,21 +18,25 @@
                     <a id="jugar" href="#">Jugar</a>
                 </div>
                 <div class="fondo-btn">                   
-                    <a id="como-jugar" href="#">¿Cómo jugar?</a>
+                    <a id="como-jugar" href="#">¿Cómo se juga?</a>
                 </div>                
             </div>  
             <div id="instructivo" class="instrucciones">
                 <div id="cerrar"><img src="images/cerrar.png" alt=""></div>
                 <div><p>Instructivo</p></div>
-                <div><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab eos deserunt, nostrum excepturi eum vitae porro amet ex, temporibus iure enim necessitatibus? Ut est exercitationem explicabo illo accusantium soluta iste.
-                Voluptatem amet voluptas, quis ipsa suscipit eaque atque eos assumenda? Esse accusamus soluta assumenda quidem unde dolorem praesentium facilis iure maxime hic aliquid, dolores reiciendis excepturi! Sequi debitis hic repudiandae. lore</p></div>
+                <div><p>En este juego de cartas 1vs1, solo sobrevivirá uno. <br>El objetivo del juego es descubrir si tu oponente está mintiendo. <br>Ya que deberan tirar cartas de la figura que toque en la ronda. <br>Pero ojo! que no siempre tendrán cartas de la figura seleccionada para tirar. 
+                <br>Que no te atrapen mintiendo, o <i>perderás</i> una de tus vidas... o quizás <i>tu vida</i>  literalmente.</p>
+                <p class="msj"><br>Pulsa <i>'Espacio'</i> para acusar a tu oponente de <i>Mentiroso</i>.</p>
+            </div>
             </div>          
         </div>
 
         <div id="carga" class="pantalla-carga">
             <img src="images/tambo2.gif" alt="">
-            <button id="comenzar"><a href="html/mentiroso.html">Comenzar</a></button>
-            <p>Este es un super consejo re piola wacho</p>
+            
+            <p>- Debes estar muy necesitado de dinero para presentarte aquí. ¿Ya leíste las reglas? <br>No te puedo dejar salir si no ganas. Pero, si lo logras, la recompensa será tuya. <br>Solo tendrás que <i>ocuparte</i> de ella...</p>
+
+            <button id="comenzar"><a href="html/mentiroso.html">+ Sí, estoy listo.</a></button>
         </div>
         
     </main>
