Agregue un boton para volver al menu desde el juego

--- a/html/mentiroso.html
+++ b/html/mentiroso.html
@@ -11,7 +11,7 @@
 
     <main id="fondo-main">    
         <div class="menu">
-            <img src="../images/menu.png" alt="Imagen de menu">
+            <img id="opciones" src="../images/menu.png" alt="Imagen de menu">
         </div>
 
         <div class="container-cartas-rival">
