--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div id="cerrar"><img src="images/cerrar.png" alt=""></div>
                 <div><p>Instructivo</p></div>
                 <div><p>En este juego de cartas 1vs1, solo sobrevivirá uno. <br>El objetivo del juego es descubrir si tu oponente está mintiendo. <br>Ya que deberan tirar cartas de la figura que toque en la ronda. <br>Pero ojo! que no siempre tendrán cartas de la figura seleccionada para tirar. 
-                <br>Que no te atrapen mintiendo, o <i>perderás</i> una de tus vidas... o quizás <i>tu vida</i>  literalmente.</p>
+                <br>Que no te atrapen mintiendo, o <i>perderás</i> una de tus vidas... o quizás, <i>tu vida</i>  literalmente.</p>
                 <p class="msj"><br>Pulsa <i>'Espacio'</i> para acusar a tu oponente de <i>Mentiroso</i>.</p>
             </div>
             </div>          
