Agregue efecto de sonidos a botones del menu, sonido de ambiente en ambos html

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         </div>
         
     </main>
+    <audio id="efectos-sonido" src=""></audio>
+    <audio id="ambiente" loop autoplay>
+        <source src="audio/ambiente1.mp3 " type="audio/mpeg">
+    </audio> 
     <script src="js/index.js" ></script>
 </body>
 </html>
