--- a/html/mentiroso.html
+++ b/html/mentiroso.html
@@ -90,6 +90,9 @@
         </div>
         <audio id="audio" src=""></audio>   
     </main>  
+    <audio id="ambiente" loop autoplay>
+        <source src="../audio/ambiente2.mp3 " type="audio/mpeg">
+    </audio> 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="../js/mentiroso.js"></script>
