Agregue para que el usuario tenga que leer el contrato si o si y use la firma para representar su nombre en la pantalla del juego

--- a/html/mentiroso.html
+++ b/html/mentiroso.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="container-vidas-propias">
-            <p>Santiago</p>
+            <p id="nombre-jugador">X</p>
             <div >
                 <img class="icono-vida-propias" src="../images/calavera2.png" alt="vida">
                 <img class="icono-vida-propias" src="../images/calavera2.png" alt="vida">
