Arregle problema de reproducir el sonido de ambiente automaticamente

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div id="fondoNuevo" class="fondo">
             <div id="botones" class="botones-menu">
                 <div id="btn-jugar" class="fondo-btn">
-                    <a id="jugar" href="#">Jugar</a>
+                    <p id="jugar">Jugar</p>
                 </div>
                 <div id="btn-contrato" class="fondo-btn">                   
-                    <a id="como-jugar" href="#">Ver contrato</a>
+                    <p id="como-jugar">Ver contrato</p>
                 </div>                
             </div>  
             <div id="instructivo" class="instrucciones">
