Agregue btn de mis redes y cambie la calidad de las imagenes

--- a/html/mentiroso.html
+++ b/html/mentiroso.html
@@ -35,11 +35,11 @@
         <div class="container-vidas-rival">
             <p>Bot</p>
             <div >
-                <img class="icono-vida-rival" src="../images/calavera2.png" alt="vida">
-                <img class="icono-vida-rival" src="../images/calavera2.png" alt="vida">
-                <img class="icono-vida-rival" src="../images/calavera2.png" alt="vida">
-                <img class="icono-vida-rival" src="../images/calavera2.png" alt="vida">
-                <img class="icono-vida-rival" src="../images/calavera2.png" alt="vida">
+                <img class="icono-vida-rival" src="../images/calavera2.avif" alt="vida">
+                <img class="icono-vida-rival" src="../images/calavera2.avif" alt="vida">
+                <img class="icono-vida-rival" src="../images/calavera2.avif" alt="vida">
+                <img class="icono-vida-rival" src="../images/calavera2.avif" alt="vida">
+                <img class="icono-vida-rival" src="../images/calavera2.avif" alt="vida">
             </div>
         </div>
 
@@ -57,11 +57,11 @@
         <div class="container-vidas-propias">
             <p id="nombre-jugador">X</p>
             <div >
-                <img class="icono-vida-propias" src="../images/calavera2.png" alt="vida">
-                <img class="icono-vida-propias" src="../images/calavera2.png" alt="vida">
-                <img class="icono-vida-propias" src="../images/calavera2.png" alt="vida">
-                <img class="icono-vida-propias" src="../images/calavera2.png" alt="vida">
-                <img class="icono-vida-propias" src="../images/calavera2.png" alt="vida">
+                <img class="icono-vida-propias" src="../images/calavera2.avif" alt="vida">
+                <img class="icono-vida-propias" src="../images/calavera2.avif" alt="vida">
+                <img class="icono-vida-propias" src="../images/calavera2.avif" alt="vida">
+                <img class="icono-vida-propias" src="../images/calavera2.avif" alt="vida">
+                <img class="icono-vida-propias" src="../images/calavera2.avif" alt="vida">
             </div>
         </div>
 
