--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
                 </div>
                 <div id="btn-contrato" class="fondo-btn">                   
                     <p id="como-jugar">Ver contrato</p>
-                </div>                
+                </div> 
+                <div class="fondo-btn redes-btn">                   
+                    <a id="linkedin-btn" href="https://www.linkedin.com/in/santiago-santos-05b102237/" target="_blank" >
+                        <img  src="images/linkedin.png" alt="icono-linkedin" >
+                    </a>
+
+                    <a id="github-btn" href="https://github.com/San73-S/San73-S.github.io" target="_blank" >
+                        <img src="images/github.png" alt="icono-github" >
+                    </a>
+                </div>               
             </div>  
             <div id="instructivo" class="instrucciones">
                 <div id="cerrar">
@@ -54,6 +63,6 @@
     </main>
     <audio id="efectos-sonido" src=""></audio>
     <audio id="ambiente" src="audio/ambiente1.mp3"></audio>
-    <script src="js/index.js" ></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
